--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ branches:
 before_script:
   - npm install -g firebase-tools
 
+script:
+  - echo "Inside Script Tag"
+
 after_success:
   - firebase deploy --token $FIREBASE_CI_TOKEN
